Removed files and database
