# backend/controllers/event_analysis_controller.py
@@ -74,7 +74,7 @@ class EventAnalysisController:
             limit = 20
             offset = (page - 1) * limit
             total = await self._db.count_all_events(date=date, city_id=city_id, category_id=category_id)
-            pages = int(total / limit + (total % 1 if limit > 0 else 0))
+            pages = int(total / limit + (1 if total % limit != 0 else 0))
 
             events = await self._db.all_events(offset=offset, limit=limit, date=date, city_id=city_id,
                                                category_id=category_id)
@@ -82,6 +82,46 @@ class EventAnalysisController:
             return self.response(data={
                 "current": page,
                 "pages": pages,
+                "total": total,
+                "events": [{
+                    "id": event[0],
+                    "title": event[1],
+                    "photo": event[2],
+                    "description": event[3],
+                    "start": event[4],
+                    "end": event[5],
+                    "url": event[6],
+                    "category": {
+                        "id": event[7],
+                        "name": event[8]
+                    },
+                    "city": {
+                        "id": event[9],
+                        "name": event[10]
+                    }
+                } for event in events]
+            })
+
+        except Exception as e:
+            self._logger.error(f"{e} {traceback.format_exc()}")
+            return self.error(errors=[e])
+
+    async def search_events(self, request: Request) -> dict:
+        try:
+            page = int(request.query.get("page"))
+            title = request.query.get("title")
+
+            limit = 20
+            offset = (page - 1) * limit
+            total = await self._db.get_search_event_count(query=title)
+            pages = int(total / limit + (1 if total % limit != 0 else 0))
+
+            events = await self._db.search_event(query=title, offset=offset, limit=limit)
+
+            return self.response(data={
+                "current": page,
+                "pages": pages,
+                "total": total,
                 "events": [{
                     "id": event[0],
                     "title": event[1],
@@ -119,7 +159,7 @@ class EventAnalysisController:
             self._logger.error(f"{e} {traceback.format_exc()}")
             return self.response(data=[])
 
-    async def get_prices(self, request: Request) -> dict:
+    async def get_sectors(self, request: Request) -> dict:
         try:
             event_id = request.query.get("event_id")
             available_date = request.query.get("date")
@@ -133,22 +173,41 @@ class EventAnalysisController:
             except Exception as e:
                 self._logger.error(f"{e} {traceback.format_exc()}")
 
-            prices = await self._db.get_event_prices(id=event_id, date=available_date)
-            data = {}
+            rows = await self._db.get_event_sectors(id=event_id, date=available_date)
+            return self.response(data=[row[0] for row in rows])
 
-            for price in prices:
-                if price[1] not in data:
-                    data[price[1]] = list()
+        except Exception as e:
+            self._logger.error(f"{e} {traceback.format_exc()}")
+            return self.error(errors=[e])
 
-                data[price[1]].append({
+    async def get_prices(self, request: Request) -> dict:
+        try:
+            event_id = request.query.get("event_id")
+            available_date = request.query.get("date")
+            sector = request.query.get("sector")
+            sector = sector if sector else None
+
+            event_row = await self._db.get_event(id=event_id)
+            event = Event(id=event_row[0], ticket_url=event_row[-1])
+
+            try:
+                parser = IrlSxodimParser(config=self._config, logger=self._logger, db=self._db)
+                await parser.parse_event_prices(event=event, available_date=available_date)
+            except Exception as e:
+                self._logger.error(f"{e} {traceback.format_exc()}")
+
+            prices = await self._db.get_event_prices(id=event_id, date=available_date, sector=sector)
+
+            return self.response(data=[
+                {
                     "id": price[0],
                     "date": price[1],
                     "price": price[2],
                     "seat": price[3],
-                    "available": price[4]
-                })
-
-            return self.response(data=data)
+                    "available": price[4],
+                    "sector": price[5]
+                } for price in prices
+            ])
 
         except Exception as e:
             self._logger.error(f"{e} {traceback.format_exc()}")
