# backend/models/EventPrice.py
@@ -1,8 +1,9 @@
 class EventPrice:
-    def __init__(self, id, event_id, date, price, seat, available):
+    def __init__(self, id, event_id, date, price, seat, sector, available):
         self.id = id
         self.event_id = event_id
         self.date = date
         self.price = price
         self.seat = seat
+        self.sector = sector
         self.available = available
